get registers by patient id and health professional id